<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="40dp">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_title"
                android:id="@+id/tv_search_title"
                android:layout_marginBottom="5dp"
                style="@style/TextMedium"
                />

        <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/TextSmall"
                android:hint="@string/search_title_hint"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_search_topic"
                android:text="@string/search_topic"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                style="@style/TextMedium"
                />

        <MultiAutoCompleteTextView
                android:id="@+id/topicMultiAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:imeOptions="actionSearch"
                android:inputType="text"
                style="@style/TextSmall"
                android:hint="@string/search_topics_hint"
                />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_search"
                android:text="@string/search_button"
                style="@style/ButtonStyle"
                android:layout_marginTop="15dp"
                android:onClick="searchClick"
                />

</LinearLayout>
