<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmall"
                android:text="@string/add_loanable_doelibs_identifier"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_doelibs_identifier"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmall"
                android:text="@string/add_loanable_location_category"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_location_category"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmall"
                android:text="@string/add_loanable_room"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_room"/>

        <Button
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btn_add_loanable"
                android:onClick="onSave"/>

</LinearLayout>