<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextMedium"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="#22b573"
        android:padding="10dp"
        android:id="@+id/settings_select_lang"
        android:text="@string/settings_language_selection"
        />
    
    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        style="@style/TextSmall"/>
    
    <TextView
        style="@style/TextMedium"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="#22b573"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_notifications"
        android:text="@string/settings_notifications_title"
        />

    <Switch
        android:id="@+id/notificationSwitch"
        style="@style/TextSmall"
        android:paddingTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications_activation"
        android:onClick="onNotificationChanged"/>
    
    <TextView
        style="@style/TextMedium"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="#22b573"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_my_account"
        android:text="@string/settings_account_section"
        />
    
    <!--<TextView -->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--style="@style/TextSmall"-->
        <!--android:id="@+id/settings_my_account_current"-->
        <!--android:text="@string/settings_user_connected"-->
        <!--/>-->


    <!-- this shows the current logged in user an the button to logout. By default it is visible -->
    <LinearLayout
            android:visibility="visible"
            android:id="@+id/settings_user_pannel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/settings_tv_loggedin_as"
                style="@style/TextSmall"/>
        <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLogout"
                android:layout_marginTop="10dp"
                style="@style/ButtonStyle"
                android:text="@string/btn_logout" />
    </LinearLayout>

    <!-- this shows the login "form" by default it is not visible -->
    <LinearLayout
            android:visibility="gone"
            android:id="@+id/settings_login_pannel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="40dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmall"
                android:text="@string/login_username"
                android:id="@+id/settings_login_user"/>

        <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/TextSmall"
                android:inputType="textEmailAddress"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSmall"
                android:layout_marginTop="10dp"
                android:text="@string/login_password"
                android:id="@+id/settings_login_passw"/>

        <EditText
                android:id="@+id/login_password"
                style="@style/TextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/btn_login"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btn_login"
                android:onClick="onLogin"/>

    </LinearLayout>

</LinearLayout>
